--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 
 simple-object-tracking/2.mp4
+simple-object-tracking/VID_20191204_181058AB.MP4
+simple-object-tracking/1_1.mp4
+simple-object-tracking/1.mp4
+simple-object-tracking/1_edit.mp4
+simple-object-tracking/1_edit1.mp4
+simple-object-tracking/2.mkv
+simple-object-tracking/VID_20191204_181058AA.MP4
