use library https://github.com/ageitgey/face_recognition
seems to do planned functionality nearly out of the box

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ simple-object-tracking/1_edit.mp4
 simple-object-tracking/1_edit1.mp4
 simple-object-tracking/2.mkv
 simple-object-tracking/VID_20191204_181058AA.MP4
+1_deep-learning-face-detection/known_people/*
+robik_DM/known_people/*
+robik_DM/samples/*
